--- a/index.html
+++ b/index.html
@@ -30,14 +30,11 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-4">
                     <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="service.html" class="nav-item nav-link active">BMI Status</a>
-                    <a href="guard.html" class="nav-item nav-link">Print BMI</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Help</a>
                         <div class="dropdown-menu text-capitalize">
-                            <a href="blog.html" class="dropdown-item">See Consultant</a>
-                            <a href="single.html" class="dropdown-item">Visit Our Page</a>
+                            <a href="tel://0551018283/" class="dropdown-item">See Consultant</a>
+                            <a href="https://www.facebook.com/Nurse-Library-275574200914367/" class="dropdown-item">Visit Our Page</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -77,7 +74,41 @@
     </div>
     
     </div>
-    
+     <!-- Footer Start -->
+   <div class="footer-dark">
+  <footer>
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-6 col-md-3 item">
+                  <h3>Services</h3>
+                  <ul>
+                      <li><a href="#"Ahmadiyya Muslim Mission-Kokofu></a></li>
+                      <li><a href="#">Registered Under MOH-GH</a></li>
+                      <li><a href="#">Health Service Center</a></li>
+                  </ul>
+              </div>
+              <div class="col-sm-6 col-md-3 item">
+                  <h3>About</h3>
+                  <ul>
+                      <li><a href="#">Visit</a></li>
+                      <li><a href="#">Bekwai</a></li>
+                      <li><a href="#">Kokofu</a></li>
+                  </ul>
+              </div>
+              <div class="col-md-6 item text">
+                  <h3>Sofmobitek</h3>
+                  <p>Contact Developer for all website and web applications as fast as possible @ Ahmadiyya Muslim Mission-Kokofu.</p>
+              </div>
+              <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+          </div>
+          <p class="copyright"> Powered by Softmobitek © 2022</p>
+      </div>
+  </footer>
+</div>
+
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-secondary border back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
