--- a/index.html
+++ b/index.html
@@ -121,5 +121,12 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/js.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+<script   src='js/jquery.js'></script>
+<script   src='js/bootstrap.min.js'></script>
+<script src="js/all.min.js"></script>
+<script  src='js/js.js'></script>
+<script src="js/fontawesome.min.js"></script>
 </body>
 </html>
