--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="row pt-3">
             <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
                 <p class="m-0 text-white">
-                    &copy; <a class="text-white font-weight-bold" href="#">Nurse-Library</a>. All Rights Reserved. Designed by Elvis@Softmobitekinc
+                    &copy; <a class="text-white font-weight-bold" href="#">Nurse-Library</a>. All Rights Reserved. Powered by Elvis@Softmobitekinc
                     <a class="text-white font-weight-bold" href="">See us on facebook</a>
                 </p>
             </div>
@@ -171,20 +171,6 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>   
-    
-     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- Contact Javascript File -->
-    <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="js/js.js"></script>
 </body>
 </html>
