--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     
     </div>
      <!-- Footer Start -->
-  <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
+  <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5 page-footer">
         <div class="row pt-5">
             <div class="col-lg-4 col-md-12 mb-5">
                 <h1 class="mb-3 display-5 text-capitalize font-italic text-white"><span class="text-primary">Nurse-Library</span>Ahmadiyya</h1>
